--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,8 @@
 * {
     font-family: 'Open Sans', sans-serif;
     color: white;
-    text-shadow: 0px 0px 10px rgba(0, 0, 0)
+    text-shadow: 0px 0px 10px rgba(0, 0, 0);
+    background-image: url("../images/indevbj.JPG");
 }
 
 html, body {
