--- a/css/index.css
+++ b/css/index.css
@@ -4,7 +4,7 @@
     font-family: 'Open Sans', sans-serif;
     color: white;
     text-shadow: 0px 0px 10px rgba(0, 0, 0);
-    background-image: url("../images/indevbj.JPG");
+    background-image: url('../images/indevbj.JPG');
 }
 
 html, body {
