--- a/css/index.css
+++ b/css/index.css
@@ -37,14 +37,13 @@ div.text {
     background-color: rgb(0, 0, 0, .5);
     display: flex;
     align-items: center;
-    margin: 0;
     font-size: small;
     position: absolute;
     bottom: 0px;
     width: 100%;
 }
 
-.footer a {
+a {
     margin: 10px;
 }
 
