--- a/css/index.css
+++ b/css/index.css
@@ -1,33 +1,8 @@
-* {
-    font-family: 'Open Sans', sans-serif;
-    color: white;
-}
-
-html, body {
-    padding: 0;
-    margin: 0;
-}
-
-html {
-    background-image: url(../images/back.png);
-    background-size: cover;
-}
-
-div.text {
-    margin: 0;
+.tim {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
-}
-
-a {
-    color: white;
-    margin: 10px;
-    text-decoration: none; 
-}
-
-div.images img {
-    filter: drop-shadow(0px 0px 5px black);
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
 }
